fix bug with long videos on mobile // fix buttons click-box // remove sources on build

--- a/client/src/components/SharedGIF/SharedGIF.scss
+++ b/client/src/components/SharedGIF/SharedGIF.scss
@@ -4,15 +4,10 @@
   max-width: 90%;
   margin: auto;
 
-  a.download-button {
-    display: block;
+  a.download-button, .share-a-gif {
+    display: inline-block;
     margin-top: 15px;
     text-decoration: none;
-  }
-
-  .share-a-gif {
-    display: block;
-    margin-top: 15px;
   }
 
   .password-wrapper {
